--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>dumfan</title>
-  <meta name="description" content="Vi är coola">
+  <meta name="description" content="Vi Ã¤r coola">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
